Fix OpenSource iphoneos arm64e build https://bugs.webkit.org/show_bug.cgi?id=206703

Reviewed by Yusuke Suzuki.

Source/JavaScriptCore:

* runtime/MachineContext.h:
(JSC::MachineContext::stackPointerImpl): Conditionalize function existence on
USE(DARWIN_REGISTER_MACROS).
(JSC::MachineContext::stackPointer): Use Darwin's register macros if available.
(JSC::MachineContext::setStackPointer): Ditto.
(JSC::MachineContext::instructionPointerImpl): Conditionalize function existence
on USE(DARWIN_REGISTER_MACROS).
(JSC::MachineContext::instructionPointer): Use Darwin's register macros if available.
(JSC::MachineContext::setInstructionPointer): Ditto.
(JSC::MachineContext::linkRegister): Ditto.
(JSC::MachineContext::setLinkRegister): Ditto.
(JSC::MachineContext::linkRegisterImpl): Deleted.

Source/WTF:

* wtf/PlatformUse.h: Add USE(DARWIN_REGISTER_MACROS) check.


Canonical link: https://commits.webkit.org/219863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255216 268f45cc-cd09-0410-ab3c-d52691b4dbfc